--- a/costcalc/templates/products/manage_product.html
+++ b/costcalc/templates/products/manage_product.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 
 {% block content%}
-    <p>welcome to auth login page</p>
+    <p>welcome to products home page</p>
+    {{ fstr }}
 {% endblock %}
