--- a/costcalc/templates/resources/manage_labor.html
+++ b/costcalc/templates/resources/manage_labor.html
@@ -2,7 +2,7 @@
 {% from 'bootstrap5/form.html' import render_form %}
 
 {% block content%}
-    <a id="new-labor" class="btn btn-primary" href="{{ url_for('resources.new_labor')}}">增加</a>
+    <a class="btn btn-primary" href="{{ url_for('resources.new_labor')}}">增加</a>
     <div id="table"></div>
 {% endblock %}
 
