--- a/costcalc/templates/products/manage_product.html
+++ b/costcalc/templates/products/manage_product.html
@@ -1,6 +1,17 @@
 {% extends 'base.html' %}
+{% from 'bootstrap5/form.html' import render_form %}
 
 {% block content%}
-    <p>welcome to products home page</p>
-    {{ fstr }}
+<a class="btn btn-primary" href="{{ url_for('products.new_product')}}">增加</a>
+<div id="table"></div>
+{% endblock %}
+
+
+{% block scripts %}
+{{ super() }}
+<script>
+    // 将 materials 数据转换为 JSON 并嵌入到 JavaScript 变量中
+    let data = {{ products | tojson | safe }};
+</script>
+<script src="{{ url_for('static', filename='js/product.js') }}"></script>
 {% endblock %}
