--- a/costcalc/templates/products/_plform.html
+++ b/costcalc/templates/products/_plform.html
@@ -1,6 +1,5 @@
-
-<div class="form-row">
-    <div class="form-group col-md-2">
+<div class="form-row align-items-center mb-3 position-relative">
+    <div class="form-group col-md-3">
         {{ form.labor_choices.label(class="form-label") }}
         {{ form.labor_choices(class="form-control") }}
     </div>
@@ -16,5 +15,7 @@
         {{ form.qualification_rate.label(class="form-label") }}
         {{ form.qualification_rate(class="form-control") }}
     </div>
+    <div class="form-group col-md-2">
+        <button type="button" class="btn btn-danger btn-sm position-absolute"  onclick="removeForm(this)">-</button>
+    </div>
 </div>
-
