--- a/costcalc/templates/base.html
+++ b/costcalc/templates/base.html
@@ -41,6 +41,12 @@
 
         <!-- Main Content -->
         <div class="content">
+            {% for message in get_flashed_messages(with_categories=True) %}
+                <div class="alert alert-{{ message[0] }}" role="alert">
+                    <button type="button" class="close" data-dismiss="alert">&times;</button>
+                    {{ message[1] }}
+                </div>
+            {% endfor %}
             {% block content %}{% endblock %}
         </div>
     </div>
