--- a/costcalc/templates/products/detail_product.html
+++ b/costcalc/templates/products/detail_product.html
@@ -58,13 +58,17 @@
 
 {% block content %}
 
-<h3>产品名称：{{ product.name}}</h3>
+<div>
+    <h3 style="display: inline-block;">产品名称：{{ product.name }}</h3>
+    <a href="{{ url_for('products.edit_product', product_id=product.id) }}" class="btn btn-primary" style="float:right; vertical-align: top;">编辑</a>
+</div>
+
 {{ render_dynamic_table(product.materials_dict) }}
 {{ render_dynamic_table(product.labors_dict) }} 
 
 {{ render_dict_horizontal_table(product.trans_dict) }}
 {{ render_dict_horizontal_table(product.coef_dict) }}
-
+{{ render_dict_horizontal_table(product.customization_dict)}}
 {{ render_dict_horizontal_table(product.cost_dict)}}
 
 {% endblock %}
