Rewrite the new materials and edit the materials form to enable AJAX dynamic generation.

--- a/costcalc/templates/base.html
+++ b/costcalc/templates/base.html
@@ -55,8 +55,9 @@
 
     {% block scripts %}
         <script src="{{ url_for('static', filename='js/jquery-3.6.0.min.js') }}"></script>
-        <script src="{{ url_for('static', filename='js/popper.min.js') }}"></script>
-        <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
+        <!-- <script src="{{ url_for('static', filename='js/popper.min.js') }}"></script> -->
+        <!-- <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script> -->
+        <script src="{{ url_for('static', filename='js/bootstrap.bundle.min.js') }}"></script>
         <script src="{{ url_for('static', filename='js/gridjs.umd.js') }}"></script>
         <script src="{{ url_for('static', filename='js/select2.min.js') }}"></script>
         
