--- a/costcalc/templates/resources/manage_material.html
+++ b/costcalc/templates/resources/manage_material.html
@@ -2,7 +2,43 @@
 {% from 'bootstrap5/form.html' import render_form %}
 
 {% block content%}
-    <div id="table" data-new-material-url="{{ url_for('resources.new_material') }}"></div>
+<div class="container">
+  <a class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#newMaterialModal">添加新材料</a>
+  <div id="materialTable"></div> <!-- 材料表格将在这里渲染 -->
+  
+    <!-- newMaterialModal -->
+    <div class="modal fade" id="newMaterialModal" tabindex="-1" aria-labelledby="newMaterialModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="newMaterialModalLabel">新材料</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    {{ render_form(form, action=url_for('resources.new_material'), method='post', id='newMaterialForm') }}
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Edit Material Modal -->
+    <div class="modal fade" id="editMaterialModal" tabindex="-1" aria-labelledby="editMaterialModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+          <div class="modal-content">
+              <div class="modal-header">
+                  <h5 class="modal-title" id="editMaterialModalLabel">编辑材料</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                  <!-- 表单将被动态加载到这里 -->
+              </div>
+          </div>
+      </div>
+    </div>
+  
+  
+</div>
+
 {% endblock %}
 
 
