--- a/costcalc/templates/resources/manage_material.html
+++ b/costcalc/templates/resources/manage_material.html
@@ -3,7 +3,7 @@
 
 {% block content%}
 <div class="container">
-  <a class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#newMaterialModal">添加新材料</a>
+  <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#newMaterialModal">添加新材料</button>
   <div id="materialTable"></div> <!-- 材料表格将在这里渲染 -->
   
     <!-- newMaterialModal -->
