--- a/costcalc/templates/products/_pmform.html
+++ b/costcalc/templates/products/_pmform.html
@@ -1,21 +1,21 @@
-<div class="form-row align-items-center mb-3 position-relative">
-    <div class="form-group col-md-3">
+<div class="row align-items-center mb-3 position-relative">
+    <div class="col-md-3">
         {{ form.material_choices.label(class="form-label") }}
         {{ form.material_choices(class="form-control") }}
     </div>
-    <div class="form-group col-md-2">
+    <div class="col-md-2">
         {{ form.net_weight.label(class="form-label") }}
         {{ form.net_weight(class="form-control") }}
     </div>
-    <div class="form-group col-md-2">
+    <div class="col-md-2">
         {{ form.gross_weight.label(class="form-label") }}
         {{ form.gross_weight(class="form-control") }}
     </div>
-    <div class="form-group col-md-2">
+    <div class="col-md-2">
         {{ form.qualification_rate.label(class="form-label") }}
         {{ form.qualification_rate(class="form-control") }}
     </div>
-    <div class="form-group col-md-2">
-        <button type="button" class="btn btn-danger btn-sm position-absolute"  onclick="removeForm(this)">-</button>
+    <div class="col-md-2">
+        <button type="button" class="btn btn-danger btn-sm position-absolute" onclick="removeForm(this)">-</button>
     </div>
 </div>
