--- a/costcalc/templates/products/new_product.html
+++ b/costcalc/templates/products/new_product.html
@@ -9,8 +9,8 @@
         {{ form.hidden_tag() }}
 
         <!-- 产品名称字段 -->
-        <div class="form-row">
-            <div class="form-group col-md-2">
+        <div class="row mb-3">
+            <div class="col-md-2">
                 <h5>{{ form.name.label(class="form-label") }}</h5>
                 {{ form.name(class="form-control") }}
             </div>
@@ -25,7 +25,6 @@
         <div id="materialforms-container"></div>
         <hr/>
 
-
         <!-- 动态人工表单 -->
         <div class="d-flex justify-content-between align-items-center my-3">
             <h5 class="mb-0">人工</h5>
@@ -36,49 +35,50 @@
 
         <!-- 运输费用字段 -->
         <h5>运输</h5>
-        <div class="form-row">
-            <div class="form-group col-md-2">
+        <div class="row mb-3">
+            <div class="col-md-2">
                 {{ form.trans_method.label(class="form-label") }}
                 {{ form.trans_method(class="form-control") }}
             </div>
-            <div class="form-group col-md-2">
+            <div class="col-md-2">
                 {{ form.trans_dest.label(class="form-label") }}
                 {{ form.trans_dest(class="form-control") }}
             </div>
-            <div class="form-group col-md-2">
+            <div class="col-md-2">
                 {{ form.trans_cost_kg.label(class="form-label") }}
                 {{ form.trans_cost_kg(class="form-control") }}
             </div>
         </div>
         <hr/>
+
         <!-- 系数字段 -->
         <h5>系数</h5>
-        <div class="form-row">
-            <div class="form-group col-md-2">
+        <div class="row mb-3">
+            <div class="col-md-2">
                 {{ form.dev_coef.label(class="form-label") }}
                 {{ form.dev_coef(class="form-control") }}
             </div>
-            <div class="form-group col-md-2">
+            <div class="col-md-2">
                 {{ form.fac_coef.label(class="form-label") }}
                 {{ form.fac_coef(class="form-control") }}
             </div>
-            <div class="form-group col-md-2">
+            <div class="col-md-2">
                 {{ form.admin_coef.label(class="form-label") }}
                 {{ form.admin_coef(class="form-control") }}
             </div>
-            <div class="form-group col-md-2">
+            <div class="col-md-2">
                 {{ form.sale_coef.label(class="form-label") }}
                 {{ form.sale_coef(class="form-control") }}
             </div>
-            <div class="form-group col-md-2">
+            <div class="col-md-2">
                 {{ form.finance_coef.label(class="form-label") }}
                 {{ form.finance_coef(class="form-control") }}
             </div>
-            <div class="form-group col-md-2">
+            <div class="col-md-2">
                 {{ form.tax_coef.label(class="form-label") }}
                 {{ form.tax_coef(class="form-control") }}
             </div>
-            <div class="form-group col-md-2">
+            <div class="col-md-2">
                 {{ form.profit_coef.label(class="form-label") }}
                 {{ form.profit_coef(class="form-control") }}
             </div>
@@ -87,53 +87,55 @@
 
         <!-- 定制化字段 -->
         <h5>定制化</h5>
-        <div class="form-row">
-            <div class="form-group col-md-2">
+        <div class="row mb-3">
+            <div class="col-md-2">
                 {{ form.customer_type.label(class="form-label") }}
                 {{ form.customer_type(class="form-control") }}
             </div>
-            <div class="form-group col-md-2">
+            <div class="col-md-2">
                 {{ form.payment_term.label(class="form-label") }}
                 {{ form.payment_term(class="form-control") }}
             </div>
-            <div class="form-group col-md-2">
+            <div class="col-md-2">
                 {{ form.customer_importance.label(class="form-label") }}
                 {{ form.customer_importance(class="form-control") }}
             </div>
-            <div class="form-group col-md-2">
+            <div class="col-md-2">
                 {{ form.estimated_purchase_amount.label(class="form-label") }}
                 {{ form.estimated_purchase_amount(class="form-control") }}
             </div>
-            <div class="form-group col-md-2">
+            <div class="col-md-2">
                 {{ form.region_price.label(class="form-label") }}
                 {{ form.region_price(class="form-control") }}
             </div>
-            <div class="form-group col-md-2">
+            <div class="col-md-2">
                 {{ form.customer_prospect.label(class="form-label") }}
                 {{ form.customer_prospect(class="form-control") }}
             </div>
-            <div class="form-group col-md-2">
+            <div class="col-md-2">
                 {{ form.product_risk.label(class="form-label") }}
                 {{ form.product_risk(class="form-control") }}
             </div>
-            <div class="form-group col-md-2">
+            <div class="col-md-2">
                 {{ form.technical_quality_requirement.label(class="form-label") }}
                 {{ form.technical_quality_requirement(class="form-control") }}
             </div>
-            <div class="form-group col-md-2">
+            <div class="col-md-2">
                 {{ form.customization_requirement.label(class="form-label") }}
                 {{ form.customization_requirement(class="form-control") }}
             </div>
         </div>
-     
         <hr />
 
         <!-- 提交按钮 -->
-        <div class="col text-right">
-            <button type="submit" class="btn btn-primary">提交</button>
+        <div class="row">
+            <div class="col text-end">
+                <button type="submit" class="btn btn-primary">提交</button>
+            </div>
         </div>
     </form>
 </div>
+
 {% endblock %}
 
 
